# ctftools

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/default/: toolkit.json  toolkit.yml
scripts/: finalize_release.sh  generate-artifacts.sh
src/: install_task.rs  lib.rs  main.rs  pkg.rs  process.rs  signals.rs  util.rs
src/cli/: action.rs  ansi.rs  check_tools.rs  choices.rs  install_tools.rs  interactive.rs  main.rs  make_install_tasks.rs  mod.rs  options.rs  run_tool.rs
src/cli/actions/: check_tools.rs  install_tools.rs  mod.rs
src/env/: live.rs  mock.rs  mod.rs  package_manager.rs
src/env/snapshots/: ctftools__env__live__tests__with_path_test_debug_fmt.snap
src/exec/: mod.rs
src/install/: live.rs  mod.rs  planner.rs  task.rs
src/process/: builder.rs  error.rs  mod.rs
src/registry/: builtin-tools.json  builtin-tools.toml  mod.rs  toolkit.rs  tools.rs
src/tools/: mod.rs
src/util/: mod.rs
tests/: check_tools.rs  install_missing_tools.rs
tests/snapshots/: check_tools__empty_toolkit.snap  check_tools__existing_toolkit.snap  check_tools__installed_all_tools_from_toolkit.snap  check_tools__missing_toolkit.snap  check_tools__missing_tools_from_toolkit.snap  install_missing_tools__could_not_install.snap  install_missing_tools__empty_toolkit.snap
