[package]
name = "memotools"
authors = ["memothelemo <dev@memothelemo.xyz>"]
description = "CTF Tools"
license = "GPL-3.0"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/memothelemo/ctftools"

[[bin]]
name = "memotools"
path = "src/cli/main.rs"

[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
anyhow = "1.0.100"
cfg-if = "1.0.4"
console = "0.16.1"
ctrlc = "3.5.1"
dialoguer = "0.12.0"
maplit = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
which = "8.0.0"

[target.'cfg(unix)'.dependencies]
sudo = "0.6.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = ["Win32_Security", "Win32_System_Threading"]
