[package]
name = "ctftools"
authors = ["memothelemo <dev@memothelemo.xyz>"]
description = "CTF Tools"
license = "GPL-3.0"
version = "0.1.0-alpha.1"
edition = "2024"
repository = "https://github.com/memothelemo/ctftools"

[[bin]]
name = "ctftools"
path = "src/bin/main.rs"

[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
anyhow = "1.0.100"
bon = "3.8.1"
cfg-if = "1.0.4"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
ctrlc = "3.5.1"
dashmap = "6.1.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
env_logger = "0.11.8"
libc = "0.2.177"
log = "0.4.29"
maplit = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-escape = "0.1.5"
signal-hook = "0.3.18"
thiserror = "2.0.17"
which = "8.0.0"

[target.'cfg(unix)'.dependencies]
sudo = "0.6.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Security", "Win32_System_Threading"]

[dev-dependencies]
assert_cmd = "2.1.1"
insta = "1.44.3"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"
